Another set of style fixes: - use flexbox for rendering timeline events, no more width calculation at the JS level - events show the timestamp in a header, alongside with a slack username if available - nicer add custom event form, incredible effort: `text-align: center;` :-(

--- a/styles/app.css
+++ b/styles/app.css
@@ -15,7 +15,7 @@ body {
 
 
 .addevent {
-
+	text-align: center;
 }
 
 
@@ -41,7 +41,8 @@ li.completed {
 	margin: 0;
 }
 .timeline li {
-	min-height: 2.3em;
+	min-height: 2.4em;
+	padding-bottom: 2px;
 	border-bottom: 1px dotted #b6b6b6;
 }
 .timeline__time {
@@ -50,21 +51,34 @@ li.completed {
 	line-height: 2.3em;
 	height: 2.3em;
 	font-size: 1em;
+	color: #b6b6b6;
 }
 .timeline__events {
-	display: inline-block;
-	min-height: 2.3em;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	min-height: 2.4em;
 	border-left: 1px solid #b6b6b6;
 	margin-left: 3.5em;
 }
 .event {
-	display: inline-block;
+	flex-grow: 1;
+	align-self: center;
+	margin-left: 0.5em;
 }
 .event__label {
 	padding: 3px 2px 4px;
 	margin-left: 2px;
 	border: 1px solid;
 	border-radius: 3px;
+}
+.event header {
+	width: 100%;
+	font-size: 0.8em;
+}
+.event time {
+	margin-right: 2px;
+	font-weight: bold;
 }
 
 .event__severity-info {
@@ -73,12 +87,13 @@ li.completed {
 	border-color: #689F38;
 }
 .event__severity-alert {
-	background-color: #FF5722;
+	flex-grow: 1.5;
+	background-color: #E64A19;
 	border-color: darkred;
 	color: white;
 }
 
 .event-completed {
-	opacity: 0.6;
+	opacity: 0.4;
 	text-decoration: line-through;
 }
