--- a/styles/paginator.css
+++ b/styles/paginator.css
@@ -22,4 +22,5 @@
 	flex-basis: 50%;
 	text-align: center;
 	font-size: 1.5em;
+	font-weight: bolder;
 }
